--- a/aesd-char-driver/Makefile
+++ b/aesd-char-driver/Makefile
@@ -23,6 +23,9 @@ PWD       := $(shell pwd)
 modules:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 
+modules_install:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
+
 endif
 
 clean:
