server - added new build flag to write /dev/aesdchar

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,6 @@
+USE_AESD_CHAR_DEVICE ?= 1
 CC ?= $(CROSS_COMPILE)gcc
-CFLAGS ?= -Wall -Werror -g
+CFLAGS ?= -Wall -Werror -g -DUSE_AESD_CHAR_DEVICE=$(USE_AESD_CHAR_DEVICE)
 LDFLAGS ?= -lpthread
 TARGET ?= aesdsocket
 
