aesdsocket - build time macro USE_AESD_CHAR_DEVICE added to makefile and source

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
-USE_AESD_CHAR_DEVICE ?= 1
+USE_AESD_CHAR_DEVICE ?= 0
 CC ?= $(CROSS_COMPILE)gcc
-CFLAGS ?= -Wall -Werror -g -DUSE_AESD_CHAR_DEVICE=$(USE_AESD_CHAR_DEVICE)
+CFLAGS ?= -Wall -Werror -g
 LDFLAGS ?= -lpthread
 TARGET ?= aesdsocket
 
@@ -9,7 +9,7 @@ all: $(TARGET)
 default: all
 
 ${TARGET}:
-	$(CC) $(LDFLAGS) $(CFLAGS) aesdsocket.c -o aesdsocket
+	$(CC) $(LDFLAGS) $(CFLAGS) -DUSE_AESD_CHAR_DEVICE=$(USE_AESD_CHAR_DEVICE) aesdsocket.c -o aesdsocket
 
 clean:
 	rm -f *.o aesdsocket
